[project]
name = "rule34Py"
description = "API wrapper for rule34.xxx"
version = "2.1.0"
license = {file = "LICENSE"}
readme = "README.md"
keywords = [ "rule34.xxx", "adult", "nsfw", "rule34-pi", "api-client" ]
authors = [
	{ name = "MiningXL", email = "miningxl@gmail.com" },
	{ name = "b3yc0d3", email = "b3yc0d3@gmail.com" },
	{ name = "Tal A. Baskin", email = "talbaskin.business@gmail.com" },
	{ name = "ripariancommit", email = "ripariancommit@protonmail.com" }
]
requires-python = ">=3.5"
maintainers = [
	{ name = "b3yc0d3", email = "b3yc0d3@gmail.com" }
]
dependencies = [
	"requests-ratelimiter >= 0.7.0",
	"beautifulsoup4 >= 4.9.3",
	"lxml >= 4.6.4",
	"requests >= 2.27.1",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python :: 3.5",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent"
]

[tool.setuptools]
packages = [ "rule34Py" ]

[project.urls]
Issues = "https://github.com/b3yc0d3/rule34Py/issues"
Repository = "https://github.com/b3yc0d3/rule34Py"
Documentation = "https://github.com/b3yc0d3/rule34Py/tree/master/docs"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
	"ruff >= 0.11.10",
]
test = [
	"pytest >= 8.3.2",
	"responses >= 0.25.3",
]
docs = [
	"sphinx >= 8.2.3",
	"sphinx-rtd-theme >= 3.0.2",
]

[tool.ruff.lint]
preview = true  # necessary to enable the pydoclint rules
select = [
	"D",  # pydocstyle
	"DOC",  # pydoclint
#	"I",  # isort
#	"F",  # Pyflakes
#	"E",  # pycodestyle - error
#	"N",  # pep8-naming
#	"PL",  # pylint - all
#	"RUF",  # Ruff-specific rules
]
ignore = [
	# Ignore line lengths; mostly bc. there is no way to ignore only docstring linelengths.
	"E501",
	# Ignore PEP 8 bad-module-name. 'rule34Py' does not comply, but will not be renamed.
	"N999",
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Use Google-style docstrings.
